manifests/calico/vm-experiment/22-protected-vm-egress-allow.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: vm-experiment-protected-egress-allow
spec:
  order: 10
  selector: policy_profile == "restricted"
  types:
    - Egress
  egress:
    - action: Allow
