manifests/calico/vm-experiment/24-allow-labelled-workload-to-legacy-api.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: vm-experiment-allow-labelled-workload-to-legacy-api
spec:
  order: 30
  selector: endpoint_role == "legacy-api"
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: access == "legacy-http"
      destination:
        ports:
          - 80
