manifests/calico/vm-experiment/40-legacy-01-deny-http.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: vm-experiment-deny-legacy-01-http
spec:
  order: 5
  selector: host_name == "hep-0605-0534-legacy-01"
  types:
    - Ingress
  ingress:
    - action: Deny
      protocol: TCP
      destination:
        ports:
          - 80
